--- a/css/discography.css
+++ b/css/discography.css
@@ -224,9 +224,41 @@
     padding: 0;
 }
 
-.featureList .feature img {
-    border: solid 5px black;
+.featureList .feature {
+    position: relative;
     width: 200px;
+    height: 200px;
+    border: solid 5px black;
+}
+
+.featureList .selected {
+    border-color: var(--crush40-blue-pale);
+}
+
+.featureList .feature img {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.featureList .feature .hover {
+    visibility: hidden;
+
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.featureList .feature:not(.selected):hover .hover {
+    cursor: pointer;
+    visibility: visible;
 }
 
 .featureInfo {
