--- a/css/site.css
+++ b/css/site.css
@@ -218,6 +218,27 @@ html, body {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+/* ZOOM */
+.zoom {
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 200;
+
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.zoom img {
+    max-width: 90%;
+    max-height: 90%;
+}
+
 /* NAVBAR */
 .nav {
     position: fixed;
