--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -62,6 +62,13 @@ body {
     padding: 0;
 }
 
+.dimentiaFont {
+    font-family: 'Dimentia';
+    font-style: italic;
+    font-weight: 300;
+    color: red;
+}
+
 /* Intro */
 .intro {
     padding-left: 5px;
@@ -264,6 +271,8 @@ body {
 }
 
 .physical .physicalTitleText {
+    
+
     margin: 0;
 }
 
