Center details on mobile track view

--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -138,6 +138,10 @@ body {
     background-color: var(--crush40-red-pale);
     margin: 5px;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     min-width: 300px;
 
     cursor: pointer;
