--- a/menus/css/songView.css
+++ b/menus/css/songView.css
@@ -8,7 +8,7 @@ body {
     grid-template-areas:
         "lyrics intro lists"
         "lyrics desc lists"
-        "listen desc lists";
+        "performances desc lists";
     
     gap: 5px;
 }
@@ -16,17 +16,18 @@ body {
 .block {
     background-color: var(--crush40-gray);
     padding: 0;
+    text-align: center;
 }
 
 .intro {
     grid-area: intro;
     background-color: var(--separator-color);
-    text-align: center;
 }
 
 .desc {
     grid-area: desc;
     padding: 10px;
+    text-align: left;
 }
 
 .desc p {
@@ -37,20 +38,30 @@ body {
     text-align: center;
 }
 
-.desc .heading, .desc .subHeading {
-    text-align: center;
+.desc hr {
+    border: none;
+    height: 3px;
+    background-color: red;
+}
+
+.desc .heading {
+    font-family: 'Bahnschrift', sans-serif;
+    font-weight: 700;
+    font-size: 180%;
+    margin-bottom: 0;
 }
 
 .desc .subHeading {
     font-style: italic;
+    margin: 5px 0 0 0;
 }
 
 .lyrics {
     grid-area: lyrics;
 }
 
-.listen {
-    grid-area: listen;
+.performances {
+    grid-area: performances;
 }
 
 .lists {
