--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -419,6 +419,7 @@ body {
 
     .physical .imgDetails .facts {
         padding-top: 50px;
+        padding-left: 10px;
     }
 
     .physical .coverings {
