--- a/menus/css/albumView.css
+++ b/menus/css/albumView.css
@@ -19,36 +19,76 @@ body {
     box-sizing: border-box;
 }
 
-@media (min-width: 1000px) {
-    body {
-        grid-template-rows: 180px 200px 1fr;
-        grid-template-columns: 400px 350px 1fr;
-        grid-template-areas:
-            "intro tracks tracks"
-            "description tracks tracks"
-            "description physical physical";
-    }
+.intro {
+    grid-area: intro;
 }
 
-@media (min-width: 1160px) {
-    body {
-        grid-template-rows: auto 1fr;
-        grid-template-columns: 300px 350px 1fr;
-        grid-template-areas:
-            "intro tracks physical"
-            "description tracks physical";
-    }
+.description {
+    grid-area: description;
 }
 
-@media (min-width: 1260px) {
-    body {
-        grid-template-columns: 400px 350px 1fr;
+.physical {
+    grid-area: physical;
+}
+
+.tracks {
+    grid-area: tracks;
+}
+
+.tabs {
+    grid-area: tabs;
+    visibility: hidden;
+}
+
+@media (min-width: 1000px) and (max-width: 1409px) {
+    .page {
+        grid-template-rows: auto auto 1fr;
+        grid-template-columns: 400px 1fr;
+
+        grid-template-areas:
+            "intro physical"
+            "tabs physical"
+            "tracks physical"
+    }
+
+    .descOpen {
+        grid-template-areas:
+            "intro physical"
+            "tabs physical"
+            "description physical";
+    }
+
+    .descOpen #descriptionTab, .page:not(.descOpen) #tracksTab {
+        border-bottom-color: var(--crush40-blue);
+    }
+
+    .page.descOpen .tracks {
+        position: absolute;
+        visibility: collapse;
+    }
+
+    body:not(.descOpen) .description {
+        position: absolute;
+        visibility: collapse;
+    }
+
+    .tabs {
+        visibility: visible;
     }
 }
 
 @media (min-width: 1410px) {
-    body {
+    .page {
+        grid-template-rows: auto 1fr;
         grid-template-columns: 400px 500px 1fr;
+        grid-template-areas:
+            "intro tracks physical"
+            "description tracks physical";
+    }
+
+    .tabs {
+        position: absolute;
+        visibility: collapse;
     }
 }
 
@@ -68,7 +108,6 @@ body {
 .intro {
     padding-left: 5px;
     padding-right: 5px;
-    grid-area: intro;
     background-color: var(--separator-color);
     text-align: center;
 }
@@ -118,10 +157,6 @@ body {
 }
 
 /* Tracks */
-.tracks {
-    grid-area: tracks;
-}
-
 .tracksContents {
     display: flex;
     width: 100%;
@@ -172,7 +207,7 @@ body {
     cursor: pointer;
 }
 
-@media (min-width: 1160px) {
+@media (min-width: 1000px) {
     .tracks {
         overflow: auto;
     }
@@ -487,7 +522,7 @@ body {
 }
 
 /* Largescreen - Vertical */
-@media (min-width: 1600px) {
+@media (min-width: 1100px) {
     .physical .imgDetails {
         width: 100%;
         grid-template-rows: auto 1fr;
