--- a/css/discography.css
+++ b/css/discography.css
@@ -1,27 +1,4 @@
-@font-face {
-    font-family: 'Brig';
-    src: url('../img/fonts/discography/Brig.ttf');
-}
-
-@font-face {
-    font-family: 'Stencil';
-    src: url('../img/fonts/discography/STENCIL.TTF');
-}
-
-@font-face {
-    font-family: 'Downcome';
-    src: url('../img/fonts/discography/DOWNCOME.TTF');
-}
-
-@font-face {
-    font-family: 'Bronzo';
-    src: url('../img/fonts/discography/BronzoBold.ttf');
-}
-
-@font-face {
-    font-family: 'Impact';
-    src: url('../img/fonts/discography/Impact.ttf');
-}
+@import url('discographyFonts.css');
 
 /* Albums */
 .albums-intro {
