Add new background for each page

--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,10 @@
     src: url('../img/fonts/OoohBaby-Regular.ttf')
 }
 
+.background {
+    background-image: url('../img/visuals/Background/Back1.jpg');
+}
+
 /* INTRODUCING... CRUSH 40! */
 .intro {
     position: relative;
