--- a/css/discography.css
+++ b/css/discography.css
@@ -1,5 +1,9 @@
 @import url('discographyFonts.css');
 
+.background {
+    background-image: url('../img/visuals/Background/Back2.jpg');
+}
+
 /* Albums */
 .albums-intro {
     background-color: var(--crush40-red);
